fix responsiveness on mobile devices

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,10 +1,6 @@
 @import './variables';
 
 .projects {
-  &__title {
-    
-  }
-  
   &__wrapper {
     width: 75%;
     margin-left: auto;
@@ -53,5 +49,15 @@
   &__separator {
     margin: ($component-margin / 4) 0 ($component-margin / 2);
     width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .projects {
+    &__title {
+      margin-bottom: 2rem;
+    }
+    &__link {
+    }
   }
 }
